tests/vertical-slice/accept/int_literal_inference.hew
fn main() -> i64 {
    let _x: i32 = 1;
    let _y: u8 = 2;
    0
}
