tests/vertical-slice/reject/closure_capture_whole_value_if_else.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let c = true;
    let _f = || {
        if c { items } else { items }
    };
}
